# fine-tuning-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml  model.yaml  paths.yaml  running.yaml  tuning.yaml
metadata/: dataset_card.yaml  model_card.yaml  run_card.yaml
modules/: fine_tune.py  logger.py  runner.py  utils.py
